--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- this is header  -->
     <header class="header-content">
         <div class="header-about">
 
@@ -35,7 +36,7 @@
         </div>
 
     </header>
-
+<!-- this is main  -->
     <main>
         <div class="Our-Featured-Folwers main-cmn">
             <div class="Our-Folwers">
@@ -117,7 +118,7 @@
             </div>
         </div>
     </main>
-
+    <!-- this is footer  -->
     <footer>
         <h1 class="fotter-tittle"><span class="primary-color">Flower</span>Shop</h1>
         <p class="footer-description">It is a long established fact that a reader will be distracted by the readable <br>
